--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/6a64b8b8a8.js"
       crossorigin="anonymous"></script>
   </head>
-  <body class="relative">
+  <body class="">
     <header>
       <button class="md:hidden p-5" id="menuButton">
         <i class="fa fa-bars"></i>
@@ -19,7 +19,7 @@
       </button>
       <nav>
         <ul
-          class="hidden flex-col bg-slate-300 p-10 top-0 left-0 absolute md:flex md:space-x-2 md:flex-row md:p-0 md:bg-slate-50"
+          class="hidden flex-col bg-slate-300 p-10 top-0 left-0 absolute md:flex md:space-x-2 md:flex-row md:p-5 md:bg-white md:border md:w-svw"
           id="menuContent">
           <li><a href="#">Hem</a></li>
           <li><a href="#">Om oss</a></li>
