--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,9 @@
           Stäng
         </button>
       </dialog>
+      <!-- 
+        Fördelarna med att använda dialog elementet istället för att göra en div modal är att dialog elementet har inbyggda funktioner som screenreaders hamnar rätt automatiskt. Dialog fönstret har inbyggd att man kan stänga den det med escape knappen och fokus hamnar på elementet man var i innan. Koden blir dessutom kortare och där med lättare att hantera i med det redan ibyggda funktionerna. 
+      -->
     </main>
     <script src="code.js"></script>
   </body>
