added focus to close menu

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         Show Modal
       </button>
       <div
-        class="hidden p-5"
+        class="hidden p-5 border-b"
         id="accessibleModal"
         aria-hidden="true"
         aria-labelledby="modalTitle"
@@ -60,7 +60,7 @@
           Exempel på tillgängligt modalfönster med &lt;dialog&gt;
         </h2>
         <p>Här är innehållet i modalfönstret.</p>
-        <button class="p-4 border-2 border-black" id="closeDialogBtn">
+        <button class="border-2 border-black" id="closeDialogBtn">
           Stäng
         </button>
       </dialog>
