--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/6a64b8b8a8.js"
       crossorigin="anonymous"></script>
   </head>
-  <body class="">
+  <body>
     <header>
       <button class="md:hidden p-5" id="menuButton">
         <i class="fa fa-bars"></i>
@@ -60,9 +60,7 @@
           Exempel på tillgängligt modalfönster med &lt;dialog&gt;
         </h2>
         <p>Här är innehållet i modalfönstret.</p>
-        <button class="border-2 border-black" id="closeDialogBtn">
-          Stäng
-        </button>
+        <button class="border-2 border-black" id="closeDialogBtn">Stäng</button>
       </dialog>
       <!-- 
         Fördelarna med att använda dialog elementet istället för att göra en div modal är att dialog elementet har inbyggda funktioner som screenreaders hamnar rätt automatiskt. Dialog fönstret har inbyggd att man kan stänga den det med escape knappen och fokus hamnar på elementet man var i innan. Koden blir dessutom kortare och där med lättare att hantera i med det redan ibyggda funktionerna. 
